--- a/src/AdminUiWasm/Shared/MainLayout.razor.css
+++ b/src/AdminUiWasm/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #ff5400 0%, #ffa500 70%);
 }
 
 .top-row {
