--- a/src/AdminUiWasm/wwwroot/css/app.css
+++ b/src/AdminUiWasm/wwwroot/css/app.css
@@ -9,9 +9,15 @@ a, .btn-link {
 }
 
 .btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    color: white;
+    background-color: orangered;
+    border-color: grey;
+}
+
+.btn-primary {
+    color: white;
+    background-color: orangered;
+    border-color: grey;
 }
 
 .content {
