--- a/src/AdminUiWasm/Pages/FetchData.razor
+++ b/src/AdminUiWasm/Pages/FetchData.razor
@@ -105,7 +105,7 @@ else
 
     private void CreateType()
     {
-        NavigationManager.NavigateTo("/CreateTypeItem");
+        NavigationManager.NavigateTo("/CreateType");
     }
 
     private async Task UpdateType(int id)
@@ -122,7 +122,7 @@ else
 
     private void CreateItem()
     {
-        NavigationManager.NavigateTo("/CreateTypeItem");
+        NavigationManager.NavigateTo("/CreateItem");
     }
 
     private async Task UpdateItem(int id)
