--- a/src/AdminUiWasm/Pages/FetchData.razor
+++ b/src/AdminUiWasm/Pages/FetchData.razor
@@ -15,7 +15,7 @@ else
 {
     <h1>Burger Queen</h1>
 
-    <p>This component demonstrates fetching data from the server.</p>
+    <p>This is what we have, take a look and enjoy!!</p>
 
     <p>Create type</p>
     <div>
