--- a/src/AdminUiWasm/Pages/Item/CreateItem.razor
+++ b/src/AdminUiWasm/Pages/Item/CreateItem.razor
@@ -22,7 +22,7 @@ else
 
 		<div class="form-group">
 			<label for="picture">Picture</label>
-			<InputFile id="picture" @bind-Value="item.PictureUri" class="form-control" @ref="inputReference" OnChange=" () => SelectFile()" />
+			<InputFile id="picture" @bind-Value="item.PictureUri" class="form-control" @ref="inputReference" OnChange="SelectFile" />
 		</div>
 
 		<div class="form-group">
