--- a/src/AdminUiWasm/Pages/Item/UpdateItem.razor
+++ b/src/AdminUiWasm/Pages/Item/UpdateItem.razor
@@ -4,6 +4,9 @@
 @using Tewr.Blazor.FileReader
 @using System.IO
 
+@using System.Net.Http.Headers
+
+
 @inject HttpClient Http
 @inject CatalogApi.catalog_apiClient client
 
@@ -17,6 +20,32 @@
 else
 {
 	<h3>Update Item</h3>
+	<br />
+	<br />
+	<br />
+	<div class="form-group">
+		<label for="picture">Picture</label>
+		<input type="file" id="picture" @ref="inputReference" @onchange="SelectFile" />
+		<button class="btn btn-primary" @onclick="UploadFile">Upload Picture</button>
+		@if (!string.IsNullOrWhiteSpace(message))
+		{
+			<br />
+			<div class="alert alert-success"> File has been uploaded</div>
+		}
+		else
+		{
+			<br />
+			<div class="alert alert-success"> File has not been uploaded</div>
+		}
+		@if (imagePath != null)
+		{
+			<br />
+			<label>File name: @fileName</label>
+			<br />
+			<img style="width: 100px" src="@imagePath" />
+		}
+
+	</div>
 
 	<EditForm Model="@item" OnValidSubmit="ItemUpdate">
 
@@ -24,6 +53,8 @@ else
 			<label for="itemId">Item Id</label>
 			<InputText id="itemId" @bind-Value="@Id" class="form-control" />
 		</div>
+
+
 
 		<div class="form-group">
 			<label for="picture">Picture</label>
@@ -69,6 +100,7 @@ else
 	ElementReference inputReference;
 	string imagePath = null;
 	string fileName = string.Empty;
+	string message = string.Empty;
 
 	Stream fileStream = null;
 
@@ -105,8 +137,28 @@ else
 
 		using (var memory = await file.CreateMemoryStreamAsync((int)fileinfo.Size))
 		{
-			fileStream = memory;
+			fileStream = new MemoryStream(memory.ToArray());
 		}
 	}
+
+	private async Task UploadFile()
+	{
+		var content = new MultipartFormDataContent();
+		content.Headers.ContentDisposition = new ContentDispositionHeaderValue("form-data");
+
+		content.Add(new StreamContent(fileStream, (int)fileStream.Length), "Image", fileName);
+
+		string url = "https://localhost:5001";
+
+		var response = await Http.PostAsync($"{url}/api/images", content);
+
+		if (response.IsSuccessStatusCode)
+		{
+			var uploadedfile = await response.Content.ReadAsStringAsync();
+			imagePath = $"{url}/{uploadedfile}";
+			message = "File has been uploaded succesfully";
+		}
+	}
+
 }
 
