--- a/src/AdminUiWasm/Pages/FetchData.razor
+++ b/src/AdminUiWasm/Pages/FetchData.razor
@@ -66,7 +66,7 @@ else
                                     if (item.CatalogTypeId == type.Id)
                                     {
                                         <tr>
-                                            <td>@item.PictureUri</td>
+                                            <td><img width="100" src="@item.PictureUri"/> </td>
                                             <td>@item.Name</td>
                                             <td>@item.Description</td>
                                             <td>€ @item.Price</td>
