Upload file test (#93)
* Feature/implement files controller (#84)

* FilesController

* FileController createitem & updateitem

* Upload file (#86)

* FilesController

* FileController createitem & updateitem

* Upload Files createitem & updateitem

* Scaffold FileController Actions (#82)

* FileController

* FileControllerFinal

* Update swagger code generation file (#85)

* FileController

* GenerationFile

* fixed bug upload

Co-authored-by: femkevermander <60689534+femkevermander@users.noreply.github.com>

--- a/src/AdminUiWasm/Pages/Item/CreateItem.razor
+++ b/src/AdminUiWasm/Pages/Item/CreateItem.razor
@@ -2,7 +2,6 @@
 @using AdminUiWasm.CatalogApi
 @using Tewr.Blazor.FileReader
 @using System.IO
-
 @using System.Net.Http.Headers
 
 @inject HttpClient Http
@@ -18,13 +17,14 @@
 else
 {
 	<h3>Create item</h3>
+	<br />
 	<br/>
 	<br/>
 	<div class="form-group">
 		<label for="picture">Picture</label>
 		<input type="file" id="picture" @ref="inputReference" @onchange="SelectFile" />
 		<br />
-		<button class="btn btn-primary" @onclick="UploadFile">Upload Picture</button>
+		<button class="btn btn-primary" @onclick="UploadFile" bind="item.PictureUri">Upload Picture</button>
 
 		@if (!string.IsNullOrWhiteSpace(message))
 		{
@@ -47,11 +47,6 @@ else
 	</div>
 
 	<EditForm Model="@item" OnValidSubmit="Item">
-
-		<div class="form-group">
-			<label for="picture">Picture</label>
-			<InputFile id="picture" @bind-Value="item.PictureUri" class="form-control" @ref="inputReference" OnChange="SelectFile" />
-		</div>
 
 		<div class="form-group">
 			<label for="productName">Product Name</label>
@@ -137,13 +132,15 @@ else
 
 		string url = "https://localhost:5001";
 
-		var response = await Http.PostAsync($"{url}/api/images", content);
+		var response = await Http.PostAsync($"{url}/Catalog", content);
 
 		if (response.IsSuccessStatusCode)
 		{
 			var uploadedfile = await response.Content.ReadAsStringAsync();
-			imagePath = $"{url}/{uploadedfile}";
-			message = "File has been uploaded succesfully";
+			var file = uploadedfile.Trim('"');
+			imagePath = $"{url}/{file}";
+			item.PictureUri = imagePath;
+			message = "File has been uploaded succesfully";	
 		}
 	}
 }
