--- a/src/AdminUiWasm/Pages/FetchData.razor
+++ b/src/AdminUiWasm/Pages/FetchData.razor
@@ -16,14 +16,12 @@ else
     <h1>Burger Queen</h1>
 
     <p>This is what we have, take a look and enjoy!!</p>
-
-    <h3>Type</h3>
-
+        
         <ul style="list-style : none">
             @foreach (var type in catalogTypes)
             {
                 
-	                <li>@type.Type</li>
+	                <li style="font-size: 25px">@type.Type</li>
                     <button type="submit" class="btn btn-primary" @onclick="()=>UpdateType(type.Id)">Update</button>
                     <button type="submit" class="btn btn-primary" @onclick="()=>DeleteType(type.Id)">Delete</button>
                     <br />
@@ -40,15 +38,15 @@ else
                                     if (item.CatalogTypeId == type.Id)
                                     {
                                             <img width="100" src="@item.PictureUri"/>
-                                            <li><b>@item.Name</b> </li>
-                                            <li>@item.Description</li>
-                                            <li>€ @item.Price</li>
+                                            <li style="font-size: 15px"><b>@item.Name</b> </li>
+                                            <li style="font-size: 15px">@item.Description</li>
+                                            <li style="font-size: 15px">€ @item.Price</li>
                                             <button type="submit" class="btn btn-primary" @onclick="()=>UpdateItem(item.Id)">Update</button>
                                             <button type="submit" class="btn btn-primary" @onclick="()=>DeleteItem(item.Id)">Delete</button>
                                         <br />
-                                        <br/>
                                     }
                                 }
+                            <br />
                             }
                     </ul>
             }
